--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -96,16 +96,30 @@ header nav ul li a:hover {
     flex-direction: column;
     justify-content: center;
     background-color: 
-
  }
 
-.project-title {
+.title {
     color: var(--primary-light);
     text-align: center;
     font-size: 20px;
     text-decoration: underline;
 }
 
-.project-list {
-     color: var(--primary-light)
+.project-list{
+    background-color: var(--tertiary-dark);
+    border: 3px solid var(--primary-light);
+    color: var(--primary-light);
+    margin: 20px 40px;
+    padding: 20px;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.about-me {
+    img
+    color: var(--primary-light);
+    font-size: 20px;
+    text-align: center;
 }
